# Simple_Kqueue_Based_Websocket_Server

./: CMakeLists.txt  README.md  handler_example.cpp  main.cpp
include/openssl/: asn1.h  asn1t.h  bio.h  bn.h  crypto.h  des_old.h  dsa.h  dso.h  engine.h  opensslconf.h  pem.h  pkcs7.h  rsa.h  srp.h  ssl.h  ssl2.h  ssl23.h  ssl3.h  tls1.h  ts.h  ui.h  x509.h  x509_vfy.h  x509v3.h
socket_server/: application_layer_base_protocol.h  socket_server.h
websocket/: websocket.h  websocket_base_handler.cpp  websocket_base_handler.h
websocket/definition/: byte.h  handshake_info_struct.h  http_attr_struct.cpp  http_attr_struct.h  websocket_header_struct.cpp  websocket_header_struct.h  websocket_payload_struct.cpp  websocket_payload_struct.h
websocket/handshake_handler/: handshake_handler.cpp  handshake_handler.h
websocket/utils/: hash_function.cpp  hash_function.h  log.cpp  log.h
